--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: My Docs
 site_name: Pronto Api
 theme:
   name: material
-  logo: assets/logo.png
+  logo: assets/logo1.png
   favicon: assets/favicon.png
   features:
     - navigation.tracking
